--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'bootstrap.min.css';
+.form-one {
+  display: block;
+  margin: 0, auto;
+}
